plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'net.lycee.web'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    constraints {
        var logbackVersion = "1.5.19"
        implementation "ch.qos.logback:logback-classic:${logbackVersion}"
        implementation "ch.qos.logback:logback-core:${logbackVersion}"
    }


    var springVersion = '3.5.6'
	// Spring Boot
	implementation "org.springframework.boot:spring-boot-starter-web:${springVersion}"
	implementation "org.springframework.boot:spring-boot-starter-validation:${springVersion}"
	implementation "org.springframework.boot:spring-boot-starter-websocket:${springVersion}"

	// DB
	runtimeOnly 'org.postgresql:postgresql:'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

	// devtools
	developmentOnly 'org.springframework.boot:spring-boot-devtools:3.0.4'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.0.4'

	// lombok
    var lombokVersion = "1.18.42"
	compileOnly "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

	// validation
	implementation 'am.ik.yavi:yavi:0.13.1'

	// testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	testImplementation 'org.assertj:assertj-core:3.25.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
